crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_212_Multicart212_83_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-212-Multicart212/83-in-1 [p1].zip
rom_sha256=372d407a6cab777b68640d1a819ab9ad115ec39b1dad3975994db937c3a7f739
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=618849c0f45e555c
checkpoint f900 fb_fnv1a64=4c30ab54bcb7552d
checkpoint f1100 fb_fnv1a64=79b6f8bfe9cf7a71
