crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_213_Multicart213_9999999_in_1_p2_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-213-Multicart213/9999999-in-1 [p2].zip
rom_sha256=4a0bfca98b70e858bc385bb6aa3f6ae96e0f6491060e39c297486737abd56133
frames=1141
fb_bytes=245760
cycles=33949770
audio_samples=836505
audio_fnv1a64=95ccde42aa9a64ed
checkpoint f900 fb_fnv1a64=507edce0ae427dac
checkpoint f1100 fb_fnv1a64=8ef7fcd740e392ae
