crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_214_Multicart214_Super_Gun_20_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-214-Multicart214/Super Gun 20-in-1 [p1][!].nes
rom_sha256=ad32af817fcb829536cdc6d3103b065318a07c0b6128d317be87bc4baca620aa
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=b2b2fe80c18cf841
checkpoint f900 fb_fnv1a64=18579b594c0d98cd
checkpoint f1100 fb_fnv1a64=19717e003d1bdb48
