crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_214_Multicart214_Super_Gun_20_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-214-Multicart214/Super Gun 20-in-1 [p1][!].zip
rom_sha256=286d569153066a2a4e8d2ba609077263e0a19e9b697aa4ba6990eca608399d3b
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=b2b2fe80c18cf841
checkpoint f900 fb_fnv1a64=18579b594c0d98cd
checkpoint f1100 fb_fnv1a64=19717e003d1bdb48
